stop over-cropping.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtLoginApp/trunk@5482 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -57,7 +57,6 @@ form {
 }
 
 form div {
-	overflow: hidden;
 	position: relative;
 	padding-bottom: 1em;
 }
